--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "common",
+  "name": "commonasd",
   "version": "1.0.0",
   "description": "Common package for code sharing between web and native",
   "license": "MIT",
