--- a/packages/cra/package.json
+++ b/packages/cra/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "commonasd": "1.0.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
@@ -35,8 +36,5 @@
   },
   "devDependencies": {
     "eslint-config-react-app": "^6.0.0"
-  },
-  "workspaces": [
-    "../common"
-  ]
+  }
 }
