--- a/libs/my_common/package.json
+++ b/libs/my_common/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "commonasd",
+  "name": "@dy/my_common",
   "version": "1.0.0",
   "description": "Common package for code sharing between web and native",
   "license": "MIT",
-  "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
+    "react-redux": "^7.2.6"
   }
 }
