--- a/apps/cra/package.json
+++ b/apps/cra/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@dy/my_common": "1.0.0",
+    "@dy/common": "1.0.0",
+    "@dy/utils": "1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
