--- a/apps/cra/package.json
+++ b/apps/cra/package.json
@@ -4,20 +4,8 @@
   "private": true,
   "dependencies": {
     "@dy/common": "1.0.0",
-    "@dy/utils": "1.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
+    "@dy/cra-utils": "1.0.0",
+    "react-scripts": "4.0.3"
   },
   "browserslist": {
     "production": [
@@ -31,7 +19,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "eslint-config-react-app": "^6.0.0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   }
 }
