--- a/apps/gatsby/package.json
+++ b/apps/gatsby/package.json
@@ -7,16 +7,16 @@
   "keywords": [
     "gatsby"
   ],
+  "dependencies": {
+    "@dy/common": "1.0.0",
+    "@dy/gatsby-utils": "1.0.0",
+    "gatsby": "^4.1.0"
+  },
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
-  },
-  "dependencies": {
-    "gatsby": "^4.1.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
   }
 }
