--- a/apps/cra/package.json
+++ b/apps/cra/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@dy/common": "1.0.0",
-    "@dy/cra-utils": "1.0.0",
+    "@dy/common": "*",
+    "@dy/cra-utils": "*",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
   },
   "browserslist": {
