--- a/libs/cra-utils/package.json
+++ b/libs/cra-utils/package.json
@@ -2,10 +2,12 @@
   "name": "@dy/cra-utils",
   "version": "1.0.0",
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "eslint-config-react-app": "^6.0.0"
