--- a/libs/gatsby-utils/package.json
+++ b/libs/gatsby-utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dy/gatsby-utils",
   "version": "1.0.0",
-  "dependencies": {
+  "peerDependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
